# istio-wasm

./: README.md  gateway.yaml
auth-grpc/: Dockerfile  auth.proto  deployment.yaml  index.js  package.json
authz-filter/: Cargo.toml  build.rs
authz-filter/src/: auth.rs  lib.rs
hello/: Dockerfile  deployment.yaml  envoy-filter.yaml  index.js
world/: Dockerfile  deployment.yaml  index.js
